--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,10 +4,12 @@ trigger:
 pool: Default # Agent is running on a machine on prem 
 
 variables:
-  HTTP_PROXY: "https://serviceproxy.se.shb.biz:8100"
-  HTTPS_PROXY: "https://serviceproxy.se.shb.biz:8100"
-  system.debug: true     
+  HTTP_PROXY: "http://127.0.0.1:8888"
+  HTTPS_PROXY: "http://127.0.0.1:8888"   # use http:// even for HTTPS proxy values (common convention)
+  NO_PROXY: "127.0.0.1,localhost,::1"
+  system.debug: true
   JFROG_CLI_LOG_LEVEL: DEBUG
+
 
 stages:
   - stage: 'DownloadAndPublish'
