--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,12 +4,12 @@ trigger:
 pool:
   name: Default  # Agent is running on-prem
 
-# variables:
-#   HTTP_PROXY: "http://127.0.0.1:8888"
-#   HTTPS_PROXY: "http://127.0.0.1:8888"   # use http:// even for HTTPS proxy values
-#   NO_PROXY: "127.0.0.1,localhost,::1"
-#   system.debug: true
-#   JFROG_CLI_LOG_LEVEL: DEBUG
+variables:
+  HTTP_PROXY: "http://127.0.0.1:8888"
+  HTTPS_PROXY: "http://127.0.0.1:8888"   # use http:// even for HTTPS proxy values
+  NO_PROXY: "127.0.0.1,localhost,::1"
+  system.debug: true
+  JFROG_CLI_LOG_LEVEL: DEBUG
 
 steps:
 - task: JfrogCliV2@1
